Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18588

Galera: Rolling upgrade: segfault during node1 upgrade with log-bin and log-slave-updates enabled

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 10.4.3
    • Galera
    • Ubuntu 18.04

    Description

      Scenario:

      • Start 5 nodes of 10.3.
      • Upgrade them to 10.4 starting from node5 - all nodes have same config.
      • Spot the fail for node1 with following error:

      2019-02-15 13:56:45 3 [Note] WSREP: wsrep_notify_cmd is not defined, skipping notification.
      190215 13:56:45 [ERROR] mysqld got signal 11 ;
      sql/wsrep_sst.cc:342(generate_binlog_index_opt_val(char**))[0x564d78122365]
      sql/wsrep_sst.cc:607(sst_prepare_other(char const*, char const*, char const*, char const**))[0x564d781234ee]
      sql/wsrep_sst.cc:819(wsrep_sst_prepare[abi:cxx11]())[0x564d78124244]
      sql/wsrep_server_service.cc:318(Wsrep_server_service::sst_request[abi:cxx11]())[0x564d7840f4e4]
      src/server_state.cpp:492(wsrep::server_state::prepare_for_sst[abi:cxx11]())[0x564d78a57718]
      src/wsrep_provider_v26.cpp:406((anonymous namespace)::sst_request_cb(void*, void**, unsigned long*))[0x564d78a6cd1c]
      src/replicator_smm.cpp:2564(galera::ReplicatorSMM::process_conf_change(void*, gcs_action const&))[0x7f137de697dc]
      src/gcs_action_source.cpp:124(galera::GcsActionSource::dispatch(void*, gcs_action const&, bool&))[0x7f137de51ee2]
      src/gcs_action_source.cpp:182(galera::GcsActionSource::process(void*, bool&))[0x7f137de52229]
      src/replicator_smm.cpp:383(galera::ReplicatorSMM::async_recv(void*))[0x7f137de687f0]
      src/wsrep_provider.cpp:263(galera_recv)[0x7f137de84784]
      /home/shako/Galera_Tests/dbs/maria_10.4-MDEV-18480/bin/mysqld(_ZN5wsrep18wsrep_provider_v2611run_applierEPNS_21high_priority_serviceE+0x30)[0x564d78a6df6a]
      src/wsrep_provider_v26.cpp:690(wsrep::wsrep_provider_v26::run_applier(wsrep::high_priority_service*))[0x564d7812d5af]
      sql/wsrep_thd.cc:61(wsrep_replication_process(THD*, void*))[0x564d7811eca7]
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            shako Shahriyar Rzayev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: