MDEV-18588 Segfault during SST on joiner with bin-log, no bin-log-index

When node is JOINER and bin-log is enabled but bin-log-index is not set in configuration, we use NULL pointer which causes segfault. 
Fixed by checking for NULL pointer before using variable.